// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getAssetTransformRules > should add SVGR rule when svg="svgr" 1`] = `
[
  {
    "test": /\\\\\\.\\(bmp\\|gif\\|jpg\\|jpeg\\|png\\|psd\\|webp\\|tiff\\|m4v\\|mov\\|mp4\\|mpeg\\|mpg\\|webm\\|aac\\|aiff\\|caf\\|m4a\\|mp3\\|wav\\|html\\|pdf\\|yaml\\|yml\\|otf\\|ttf\\|zip\\|obj\\)\\$/,
    "use": {
      "loader": "@callstack/repack/assets-loader",
      "options": {
        "inline": undefined,
        "remote": undefined,
      },
    },
  },
  {
    "test": /\\\\\\.svg\\$/,
    "use": {
      "loader": "@svgr/webpack",
      "options": {
        "native": true,
      },
    },
  },
]
`;

exports[`getAssetTransformRules > should add URI rule when svg="uri" 1`] = `
[
  {
    "test": /\\\\\\.\\(bmp\\|gif\\|jpg\\|jpeg\\|png\\|psd\\|webp\\|tiff\\|m4v\\|mov\\|mp4\\|mpeg\\|mpg\\|webm\\|aac\\|aiff\\|caf\\|m4a\\|mp3\\|wav\\|html\\|pdf\\|yaml\\|yml\\|otf\\|ttf\\|zip\\|obj\\)\\$/,
    "use": {
      "loader": "@callstack/repack/assets-loader",
      "options": {
        "inline": undefined,
        "remote": undefined,
      },
    },
  },
  {
    "test": /\\\\\\.svg\\$/,
    "type": "asset/inline",
  },
]
`;

exports[`getAssetTransformRules > should add XML rule when svg="xml" 1`] = `
[
  {
    "test": /\\\\\\.\\(bmp\\|gif\\|jpg\\|jpeg\\|png\\|psd\\|webp\\|tiff\\|m4v\\|mov\\|mp4\\|mpeg\\|mpg\\|webm\\|aac\\|aiff\\|caf\\|m4a\\|mp3\\|wav\\|html\\|pdf\\|yaml\\|yml\\|otf\\|ttf\\|zip\\|obj\\)\\$/,
    "use": {
      "loader": "@callstack/repack/assets-loader",
      "options": {
        "inline": undefined,
        "remote": undefined,
      },
    },
  },
  {
    "test": /\\\\\\.svg\\$/,
    "type": "asset/source",
  },
]
`;

exports[`getAssetTransformRules > should return default asset transform rules when no options provided 1`] = `
[
  {
    "test": /\\\\\\.\\(bmp\\|gif\\|jpg\\|jpeg\\|png\\|psd\\|svg\\|webp\\|tiff\\|m4v\\|mov\\|mp4\\|mpeg\\|mpg\\|webm\\|aac\\|aiff\\|caf\\|m4a\\|mp3\\|wav\\|html\\|pdf\\|yaml\\|yml\\|otf\\|ttf\\|zip\\|obj\\)\\$/,
    "use": {
      "loader": "@callstack/repack/assets-loader",
      "options": {
        "inline": undefined,
        "remote": undefined,
      },
    },
  },
]
`;

exports[`getAssetTransformRules > should return rules with inline option when provided 1`] = `
[
  {
    "test": /\\\\\\.\\(bmp\\|gif\\|jpg\\|jpeg\\|png\\|psd\\|svg\\|webp\\|tiff\\|m4v\\|mov\\|mp4\\|mpeg\\|mpg\\|webm\\|aac\\|aiff\\|caf\\|m4a\\|mp3\\|wav\\|html\\|pdf\\|yaml\\|yml\\|otf\\|ttf\\|zip\\|obj\\)\\$/,
    "use": {
      "loader": "@callstack/repack/assets-loader",
      "options": {
        "inline": true,
        "remote": undefined,
      },
    },
  },
]
`;

exports[`getAssetTransformRules > should return rules with remote options when provided 1`] = `
[
  {
    "test": /\\\\\\.\\(bmp\\|gif\\|jpg\\|jpeg\\|png\\|psd\\|svg\\|webp\\|tiff\\|m4v\\|mov\\|mp4\\|mpeg\\|mpg\\|webm\\|aac\\|aiff\\|caf\\|m4a\\|mp3\\|wav\\|html\\|pdf\\|yaml\\|yml\\|otf\\|ttf\\|zip\\|obj\\)\\$/,
    "use": {
      "loader": "@callstack/repack/assets-loader",
      "options": {
        "inline": undefined,
        "remote": {
          "enabled": true,
          "publicPath": "https://example.com/assets",
        },
      },
    },
  },
]
`;
